tests/ui/dis/ptr_copy.normal.stderr
error: Cannot memcpy dynamically sized data
    --> $CORE_SRC/intrinsics.rs:2456:9
     |
2456 |         copy(src, dst, count)
     |         ^^^^^^^^^^^^^^^^^^^^^
     |
     = note: Stack:
             core::intrinsics::copy::<f32>
             ptr_copy::copy_via_raw_ptr
             ptr_copy::main
             main

error: aborting due to previous error

